Jetty: Rydder opp i jettyoppsettet og gjør det mer likt fpsak. Legger til WebInfConfiguration()