@@ -1,6 +1,5 @@
 package no.nav.foreldrepenger.abonnent.web.server;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -16,58 +15,42 @@ class DataSourceKonfig {
 
     private static final Environment ENV = Environment.current();
 
-    private static final String location = "classpath:/db/migration/";
-    private DBConnProp defaultDatasource;
-    private List<DBConnProp> dataSources;
+    private final DBConnProp defaultDS;
+    private final List<DBConnProp> dataSources;
 
     DataSourceKonfig() {
-        defaultDatasource = new DBConnProp(createDatasource("defaultDS"), location + "defaultDS");
-        dataSources = Arrays.asList(
-                defaultDatasource);
+        var defaultDSName = "defaultDS";
+        this.defaultDS = new DBConnProp(ds(defaultDSName), defaultDSName);
+        dataSources = List.of(this.defaultDS);
     }
 
-    private DataSource createDatasource(String dataSourceName) {
-        HikariConfig config = new HikariConfig();
+    private static DataSource ds(String dataSourceName) {
+        var config = new HikariConfig();
         config.setJdbcUrl(ENV.getProperty(dataSourceName + ".url"));
         config.setUsername(ENV.getProperty(dataSourceName + ".username"));
-        config.setPassword(ENV.getProperty(dataSourceName + ".password")); // NOSONAR false positive
+        config.setPassword(ENV.getProperty(dataSourceName + ".password"));
 
         config.setConnectionTimeout(1000);
-        config.setMinimumIdle(1);
         config.setMaximumPoolSize(30);
         config.setConnectionTestQuery("select 1 from dual");
         config.setDriverClassName("oracle.jdbc.OracleDriver");
 
-        Properties dsProperties = new Properties();
+        var dsProperties = new Properties();
         config.setDataSourceProperties(dsProperties);
 
         return new HikariDataSource(config);
-    }
-
-    DBConnProp getDefaultDatasource() {
-        return defaultDatasource;
     }
 
     List<DBConnProp> getDataSources() {
         return dataSources;
     }
 
-    class DBConnProp {
-        private DataSource datasource;
-        private String migrationScripts;
-
-        public DBConnProp(DataSource datasource, String migrationScripts) {
-            this.datasource = datasource;
-            this.migrationScripts = migrationScripts;
-        }
-
-        public DataSource getDatasource() {
-            return datasource;
-        }
-
-        public String getMigrationScripts() {
-            return migrationScripts;
-        }
+    @Override
+    public String toString() {
+        return getClass().getSimpleName() + " [defaultDS=" + defaultDS + ", dataSources=" + dataSources + "]";
     }
 
+    public DataSource defaultDS() {
+        return defaultDS.getDatasource();
+    }
 }
